# restan

./: .gitignore  CMakeLists.txt  README.md  distributions.py  example.py  gibbs-test  hmcmc.py  install-modules.sh  main.cpp  setup.sh  stan-tests  test.stan  test2.stan  testData.csv
data/: parseData.cpp  parseData.h
gibbs/: main.cpp
hmcmc/: GHMCMC.cpp  GHMCMC.h  HMCMC.cpp  HMCMC.h  gradVal.h
loss/: loss.cpp  loss.h  lossfunctions.h
main/: main.cpp
parser/: parser.cpp  parser.h
peglib/: peglib.h
pi/: distributions.cpp  distributions.h  expression.h  expressionTypes.cpp  expressionTypes.h  functions.cpp  functions.h  pi.cpp  pi.h  statement.h  statementTypes.cpp  statementTypes.h
tests/: catchCacheTest.cpp  distributionTest.cpp  expressionTest.cpp  statementTest.cpp  test.cpp  test.h  testtest.cpp
utils/: utils.cpp  utils.h
